# pinetime-rs

./: .gdbinit  .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  run-tests
.cargo/: config
doc/: calendar_time.puml
host-tools/display-prototype/: Cargo.toml  TODO.md
host-tools/display-prototype/src/: main.rs
host-tools/icon-font-gen/: Cargo.toml
host-tools/icon-font-gen/src/: main.rs
host-tools/pinetime-simulator/: Cargo.toml  README.md
host-tools/pinetime-simulator/src/: main.rs
pinetime-common/: Cargo.toml
pinetime-common/src/: animated_display.rs  battery_controller.rs  display.rs  lib.rs  system_time.rs
pinetime-drivers/: Cargo.toml
pinetime-drivers/src/: animated_st7789.rs  backlight.rs  battery_controller.rs  button.rs  cst816s.rs  lcd.rs  lib.rs  spi_nor_flash.rs  st7789_ext.rs  watchdog.rs
pinetime-graphics/: Cargo.toml
pinetime-graphics/src/: display.rs  font_styles.rs  icons.rs  lib.rs
pinetime-graphics/src/screens/: mod.rs  watch_face.rs
res/fonts/: README.md  font_awesome_icons_20.raw  jetbrains_font_16_bold.raw  jetbrains_font_46_bold.raw  jetbrains_font_54_extra_bold.raw
src/: backlight.rs  battery_controller.rs  button.rs  cst816s.rs  display.rs  lib.rs  main.rs  motor_controller.rs  rtc_monotonic.rs  system_time.rs
src/resources/: font_styles.rs  fonts.rs  mod.rs
