[package]
name = "pinetime-rs"
version = "0.1.0"
edition = "2018"
exclude = [
    "host-tools",
    "doc",
]

[workspace]
members = [
    "pinetime-common",
    "pinetime-drivers",
    "pinetime-graphics",
    "host-tools/icon-font-gen",
    "host-tools/display-prototype",
]

[[bin]]
name = "pinetime"
path = "src/main.rs"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.6.0-alpha.5"
# TODO - this is moving to pinetime-graphics
heapless = "0.7"
#rubble =
#rubble-nrf5x =

[dependencies.nrf52832-hal]
version = "0.13"
features = ["rt"]
default-features = false

[dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]
default-features = false

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]
default-features = false

[dependencies.pinetime-common]
path = "pinetime-common"

[dependencies.pinetime-drivers]
path = "pinetime-drivers"

[dependencies.pinetime-graphics]
path = "pinetime-graphics"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1
