[package]
name = "pinetime-drivers"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "0.6.0-rc.2"
display-interface = "0.4"
display-interface-spi = "0.4"

[dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]
default-features = false

[dependencies.nrf52832-hal]
version = "0.14"
default-features = false

[dependencies.st7789]
version = "0.6"
features = ["graphics", "batch", "buffer"]
default-features = false

[dependencies.pinetime-common]
path = "../pinetime-common"
