[package]
name = "pinetime-simulator"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"

[dependencies.embedded-graphics-simulator]
version = "0.3"
features = ["with-sdl"]

[dependencies.pinetime-graphics]
path = "../../pinetime-graphics"

[dependencies.pinetime-common]
path = "../../pinetime-common"
